--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 * {
-    overflow-x: auto;
-    max-width: 100vw;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
     box-sizing: border-box;
     scroll-behavior: smooth;
+}
 
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+    font-family:"poppins", "sans-serif"
 }
