--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,43 +1,37 @@
 #About {
     background-color: black;
-    overflow: hidden;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
-
 }
 
 .skills {
     color: white;
-
-
 }
 
 .section1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 4rem;
+    padding-top: 3rem;
     padding-bottom: 1rem;
-
 }
 
 .section2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 100px;
     text-align: center;
+    overflow: visible;
     width: 75%;
     margin: auto;
     font-size: 0.8rem;
     font-weight: 400;
-    line-height: 1.3;
-
-
+    padding: 0 20px;
+    box-sizing: border-box;
 }
 
 .section2 p {
@@ -49,31 +43,29 @@
 
 .skillBars {
     margin: 1.5rem;
-    width: 100vw;
+    width: 100%;
     max-width: 70%;
     text-align: left;
-
 }
 
 
 .skillBarText {
-    color: white;
-    font-size: 0.79rem;
-    font-weight: lighter;
-    padding-left: 10px;
+    color: black;
+    font-size: 0.8rem;
+    font-weight: 400;
+    padding-left: 20px;
 }
 
 .skillBarText h2 {
     padding-bottom: 5px;
-    color: rgb(77, 125, 213);
+    color: rgb(23, 54, 110);
 }
 
 .skillBar {
     display: flex;
     margin: 1rem;
-    padding: 1rem 0.5rem;
-
-    background-color: rgb(50, 50, 50);
+    padding: 1rem 0.3rem;
+    background-image: linear-gradient(to right, #d49ce7, #f6c393);
     border-radius: 8px;
 
 }
@@ -94,6 +86,20 @@
         line-height: 1.4;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .skillBar {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .skillBarText {
+        padding-left: 0;
+        margin-top: 10px;
+    }
+}
+
 
 
 @media screen and (max-width: 480px) {
